# file_association

./: README.md  file-association-0.2.0.deb  file-association-0.3.0.deb  file-association-1.0.0-Linux.deb
file_association/: CMakeLists.txt  FA_Adaptor.cpp  FA_Adaptor.h  FA_Interface.cpp  FA_Interface.h  essentials.cpp  essentials.h  fileassociation.cpp  fileassociation.h  fileassociation_necessaries.xml  main.cpp
